test/conformance/chainsaw/validate/clusterpolicy/cornercases/ephemeral-containers/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: mypod
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: bar.io/busybox:1.35
