test/conformance/chainsaw/validate/clusterpolicy/cornercases/ephemeral-containers/04-debugassert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: bar.io/busybox:1.35
    name: busybox
  ephemeralContainers:
  - image: bar.io/busybox:1.35
    name: debugger
