test/conformance/chainsaw/validate/clusterpolicy/cornercases/ephemeral-containers/03-debug.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: debug
spec:
  timeouts: {}
  try:
  - command:
      args:
      - debug
      - --image=bar.io/busybox:1.35
      - -c
      - debugger
      - mypod
      - -n
      - default
      entrypoint: kubectl
