test/conformance/chainsaw/validate/clusterpolicy/cornercases/ephemeral-containers/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ephemeral-containers
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: restrict-image-registries
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-assert.yaml
  - name: step-03
    try:
    - command:
        args:
        - debug
        - --image=bar.io/busybox:1.35
        - -c
        - debugger
        - mypod
        - -n
        - default
        entrypoint: kubectl
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
